--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
+    //viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 }
