--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="${googleMapApiKey}"/>
         <activity android:name=".HomeActivity">
         </activity>
         <activity android:name=".UserAccountActivity" />
