--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="${googleMapApiKey}"/>
         <activity android:name=".HomeActivity">
         </activity>
-        <activity android:name=".UserAccountActivity" />
+        <activity android:name=".UserAccountActivity"
+            android:windowSoftInputMode="adjustResize|adjustPan"
+            />
         <activity android:name=".FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
