--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -19,8 +19,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
 
-        manifestPlaceholders = [googleMapApiKey:googleMapApiKey]
+        manifestPlaceholders = [googleMapApiKey: googleMapApiKey]
     }
 
     buildTypes {
