--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.t304.our_neighborhood">
 
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,17 +11,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="${googleMapApiKey}"/>
-        <activity android:name=".HomeActivity">
-        </activity>
-        <activity android:name=".UserAccountActivity"
-            android:windowSoftInputMode="adjustResize|adjustPan"
-            />
-        <activity android:name=".FirstActivity">
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="${googleMapApiKey}" />
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".HomeActivity">
+
+        </activity>
+        <activity
+            android:name=".UserAccountActivity"
+            android:windowSoftInputMode="adjustResize|adjustPan" />
+        <activity android:name=".FirstActivity">
+
         </activity>
     </application>
 
